inital animation tests

--- a/static/index.html
+++ b/static/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>React Redux Super Duper Starter Kit</title>
+    <title>Grant's Weathe App</title>
     <meta name="viewport" content="width=device-width">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <style media="screen" type="text/css">
