refined layout and css

--- a/static/index.html
+++ b/static/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Grant's Weathe App</title>
+    <title>Grant's Weather App</title>
     <meta name="viewport" content="width=device-width">
     <meta name="apple-mobile-web-app-capable" content="yes">
+    <link rel="stylesheet" type="text/css" href="fonts.css">
     <style media="screen" type="text/css">
       html, body {
         width: 100%;
         height: 100%;
         margin: 0px;
+        background: #1d1d1e;
       }
 
       #app {
